--- a/Fact-App/Fact-App/Info.plist
+++ b/Fact-App/Fact-App/Info.plist
@@ -18,6 +18,8 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>ROOT_URL</key>
+	<string>https://dl.dropboxusercontent.com</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIApplicationSceneManifest</key>
